--- a/main.css
+++ b/main.css
@@ -1,45 +1,110 @@
 body {
-    margin: 60px auto;
-    width: 70%;
-}
-nav ul, footer ul {
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
-    padding: 0px;
-    list-style: none;
-    font-weight: bold;
-}
-nav ul li, footer ul li {
-    display: inline;
-    margin-right: 20px;
-}
-a {
-    text-decoration: none;
-    color: #999;
-}
-a:hover {
-    text-decoration: underline;
-}
-h1 {
-    font-size: 3em;
-    font-family:'Helvetica', 'Arial', 'Sans-Serif';
-}
-p {
-    font-size: 1.5em;
-    line-height: 1.4em;
-    color: #333;
-}
-footer {
-    border-top: 1px solid #d5d5d5;
-    font-size: .8em;
+  margin: 60px auto;
+  width: 70%;
 }
 
-ul.posts { 
-    margin: 20px auto 40px; 
-    font-size: 1.5em;
+nav ul,
+footer ul {
+  font-family: 'Helvetica', 'Arial', 'Sans-Serif';
+  padding: 0px;
+  list-style: none;
+  font-weight: bold;
+}
+
+nav ul li,
+footer ul li {
+  display: inline;
+  margin-right: 20px;
+}
+
+a {
+  text-decoration: none;
+  color: #999;
+}
+
+a:hover {
+  text-decoration: underline;
+  color: #000;
+}
+
+h1 {
+  font-size: 3em;
+  font-family: 'Helvetica', 'Arial', 'Sans-Serif';
+}
+
+p {
+  font-size: 12px;
+  line-height: 1.4em;
+  color: #333;
+}
+
+footer {
+  border-top: 1px solid #d5d5d5;
+  font-size: .8em;
+}
+
+ul.posts {
+  margin: 20px auto 40px;
+  font-size: 1.5em;
 }
 
 ul.posts li {
-    list-style: none;
+  list-style: none;
 }
 
-iframe { overflow:hidden; }
+iframe {
+  overflow: hidden;
+}
+
+input {
+  display: none;
+  visibility: hidden;
+}
+
+label {
+  display: block;
+  padding: 0.5em;
+  text-align: left;
+  color: #666;
+}
+
+label:hover {
+  color: #000;
+}
+
+label::before {
+  font-family: Consolas, monaco, monospace;
+  font-weight: bold;
+  font-size: 14px;
+  content: "+";
+  text-align: center;
+  vertical-align: text-top;
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  margin-right: 3px;
+  background: radial-gradient(circle farthest-corner at center, #CCC 50%, transparent 50%);
+}
+
+#expand {
+  height: 0px;
+  overflow: hidden;
+  transition: height 1s;
+  color: #fff;
+}
+
+#expand p {
+  height: 100px;
+}
+
+section {
+  padding: 0 10px;
+}
+
+#toggle:checked ~ #expand {
+  height: 50px;
+}
+
+#toggle:checked ~ label::before {
+  content: "-";
+}
