--- a/main.css
+++ b/main.css
@@ -1,90 +1,108 @@
 .toggle-box {
-  display: none;
+    display: none;
 }
 
-.toggle-box + label {
-  cursor: pointer;
-  display: block;
-  font-weight: bold;
-  line-height: 21px;
-  margin-bottom: 5px;
+.toggle-box+label {
+    cursor: pointer;
+    display: block;
+    font-weight: bold;
+    line-height: 21px;
+    margin-bottom: 5px;
 }
 
-.toggle-box + label + div {
-  display: none;
-  margin-bottom: 10px;
+.toggle-box+label+div {
+    display: none;
+    margin-bottom: 10px;
 }
 
-.toggle-box:checked + label + div {
-  display: block;
+.toggle-box:checked+label+div {
+    display: block;
 }
 
-.toggle-box + label:before {
-  background-color: #4F5150;
-  -webkit-border-radius: 10px;
-  -moz-border-radius: 10px;
-  border-radius: 10px;
-  color: #FFFFFF;
-  content: "+";
-  display: block;
-  float: left;
-  font-weight: bold;
-  height: 20px;
-  line-height: 20px;
-  margin-right: 5px;
-  text-align: center;
-  width: 20px;
+.toggle-box+label:before {
+    background-color: #4F5150;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
+    color: #fff;
+    content: "+";
+    display: block;
+    float: left;
+    font-weight: bold;
+    height: 20px;
+    line-height: 20px;
+    margin-right: 5px;
+    text-align: center;
+    width: 20px;
 }
 
-.toggle-box:checked + label:before {
-  content: "\2212";
+.toggle-box:checked+label:before {
+    content: "\2212";
 }
 
 a {
-  color: #999;
-  text-decoration: none;
+    color: #999;
+    text-decoration: none;
 }
 
 a:hover {
-  color: #000;
-  text-decoration: underline;
+    color: rgb(0, 131, 163);
+    text-decoration: underline;
 }
 
 body {
-  margin: 60px auto;
-  width: 70%;
+    margin: 60px auto;
+    width: 70%;
+    background-color: #000;
 }
 
 footer {
-  border-top: 1px solid #d5d5d5;
-  font-size: .8em;
+    border-top: 1px solid #d5d5d5;
+    font-size: .8em;
 }
 
 h1 {
-  font-family: Helvetica, Arial, Sans-Serif;
-  font-size: 3em;
+    font-family: Helvetica, Arial, Sans-Serif;
+    font-size: 3em;
 }
 
 nav ul li,
 footer ul li {
-  display: inline;
-   list-style: none;
-  margin-right: 20px;
+    display: inline;
+    list-style: none;
+    margin-right: 20px;
 }
 
 nav ul,
 footer ul {
-  font-family: Helvetica, Arial, Sans-Serif;
-  font-weight: 700;
-  list-style: none;
-  padding: 0;
+    font-family: Helvetica, Arial, Sans-Serif;
+    font-weight: 700;
+    list-style: none;
+    padding: 0;
 }
 
 p {
-  color: #333;
-  font-size: 12px;
-  line-height: 1.4em;
+    color: #333;
+    font-size: 12px;
+    line-height: 1.4em;
 }
-ul{
-   list-style: none;
+
+ul {
+    list-style: none;
+}
+
+main {
+    color: #fff;
+}
+
+main p {
+    color: #999;
+    font-size: medium;
+}
+
+nav img {
+    position: fixed;
+    display: inline-block;
+    width: 100px;
+    border-radius: 15px 50px 30px;
 }
