major structural changes

--- a/css/main.css
+++ b/css/main.css
@@ -51,8 +51,7 @@ a:hover {
 }
 
 body {
-    margin: 60px auto;
-    width: 70%;
+    width: 100%;
     background-color: #000;
 }
 
@@ -105,4 +104,27 @@ nav img {
     float: left;
     width: 100px;
     border-radius: 15px 50px 30px;
+}
+
+.nav,
+.mainmenu {
+    display: inline-flex;
+    align-items: center;
+    width: 100%;
+}
+
+.container {
+    width: 95%;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    flex-flow: row wrap;
+}
+
+footer {
+    width: 95%;
+    display: inline-flex;
+    align-items: center;
+    justify-content: left;
+    flex-flow: row wrap;
 }
