--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,9 @@
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 .toggle-box {
     display: none;
 }
@@ -51,8 +57,8 @@ a:hover {
 }
 
 body {
-    width: 100%;
     background-color: #000;
+    min-width: 100%;
 }
 
 footer {
@@ -77,7 +83,6 @@ footer ul {
     font-family: Helvetica, Arial, Sans-Serif;
     font-weight: 700;
     list-style: none;
-    padding: 0;
 }
 
 p {
@@ -92,6 +97,7 @@ ul {
 
 main {
     color: #fff;
+    min-width: 100%;
 }
 
 main p {
@@ -110,18 +116,33 @@ nav img {
 .mainmenu {
     display: inline-flex;
     align-items: center;
-    width: 100%;
+    min-width: 100%;
 }
 
 .container {
-    width: 95%;
+    min-width: 100%;
+    height: 80vh;
     display: inline-flex;
     align-items: center;
     justify-content: center;
     flex-flow: row wrap;
+    background-image: url("/images/coffeekb.jpg");
+    background-size: cover;
+    padding: 1em;
+}
+
+.blurb {
+    padding: 10%;
+    background-color: #000;
+    width: 100%;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    flex-flow: column wrap;
 }
 
 footer {
+    padding: 5%;
     width: 95%;
     display: inline-flex;
     align-items: center;
